Support Mutated Genes and CNA Genes downlaod & bugs fixed
Translate qvalue to exponetial format with three fraction digits

Show profiled samples in the Mutated Genes and CNA tables

Support Mutated Genes and CNA Genes Tabels' TSV download

Fix bugs

1. Do not shrink svg size when text is too long
2. Fix the search issue in the pie chart table

Get default chart type through an utility class

Get samples from all layers

The issue was introduced when we have multiple scatter groups. In the previous implementation was always one group

Apply all tooltips for all icons in chart header

Expose title property for ChartContainer

--- a/src/pages/studyView/table/tables.module.scss
+++ b/src/pages/studyView/table/tables.module.scss
@@ -23,6 +23,10 @@
   align-items: center;
 }
 
+.labelContentSVG {
+  flex-shrink: 0;
+}
+
 .bottomTools {
   display: flex;
   justify-content: space-between;
